; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/bt8xx/extr_bttv-driver.c_bttv_crop_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/bt8xx/extr_bttv-driver.c_bttv_crop_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.bttv_crop = type { i32 }

@bttv_tvnorms = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bttv_crop*, i32)* @bttv_crop_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bttv_crop_reset(%struct.bttv_crop* %0, i32 %1) #0 {
  %3 = alloca %struct.bttv_crop*, align 8
  %4 = alloca i32, align 4
  store %struct.bttv_crop* %0, %struct.bttv_crop** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @bttv_tvnorms, align 8
  %6 = load i32, i32* %4, align 4
  %7 = zext i32 %6 to i64
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.bttv_crop*, %struct.bttv_crop** %3, align 8
  %13 = getelementptr inbounds %struct.bttv_crop, %struct.bttv_crop* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.bttv_crop*, %struct.bttv_crop** %3, align 8
  %15 = call i32 @bttv_crop_calc_limits(%struct.bttv_crop* %14)
  ret void
}

declare dso_local i32 @bttv_crop_calc_limits(%struct.bttv_crop*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
